--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
   --container-width: 1400px;
   --container-paddings: 60px;
   --header-height: 70px;
-  --header-innerHeight: 40px;
+  --header-inner-height: 70px;
   --border-small: 13px;
   --border-normal: 16px;
   --border-medium: 20px;
@@ -136,7 +136,7 @@ h4 {
   color: #fff;
   text-transform: none;
   line-height: 1.3;
-  margin-bottom: 0.925em;
+  margin-bottom: 0.45em;
 }
 
 h1 {
@@ -160,7 +160,7 @@ p:not(:last-of-type) {
   padding: 1em 2em;
   font-size: 16px;
   font-weight: 700;
-  margin-top: 2.45em;
+  margin-top: 2.75em;
   transition: all 0.3s ease-out;
   box-shadow: 0.5em 1em 4em 0 rgba(0, 0, 0, 0.7);
 }
@@ -179,23 +179,22 @@ p:not(:last-of-type) {
   margin: 0 auto;
 }
 
-.main {
-  margin-top: var(--header-height);
-}
-
 .header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--secondary-background-color);
+  background-color: rgba(0, 0, 0, 0);
   z-index: 999;
   padding: 10px 0;
   transform: none;
-  transition: transform 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.header.header-onmove {
+  background-color: var(--secondary-background-color);
 }
 .header.menu-hidden {
-  transform: translateY(calc(-1 * var(--header-innerHeight) - 2px));
+  transform: translateY(calc(-1 * var(--header-inner-height) - 2px));
 }
 .header .header-inner {
   max-width: calc(var(--container-width) + var(--container-paddings) / 2);
@@ -205,29 +204,58 @@ p:not(:last-of-type) {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: relative;
+  z-index: 5;
 }
 .header .header-inner .logo {
   width: 13%;
+  margin-right: auto;
+  margin-left: 2em;
 }
 .header .header-inner .logo img {
   max-width: 240px;
   width: 100%;
 }
+.header .header-inner .navigation {
+  position: absolute;
+  left: var(--container-paddings);
+  bottom: 0;
+  max-width: calc(100% - var(--container-paddings) * 2);
+  width: 200px;
+  transform: translateY(100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.05s ease-out;
+}
 .header .header-inner .navigation .header-nav {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
 }
 .header .header-inner .navigation .header-nav ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: -1em;
+  display: block;
+  padding: 1.45em;
+  border-radius: var(--border-medium);
+  background-color: rgba(55, 55, 55, 0.6);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 .header .header-inner .navigation .header-nav ul li {
-  margin: 1em;
-  color: rgba(255, 255, 255, 0.65);
+  display: block;
 }
-.header .header-inner .navigation .header-nav ul li.current-menu-item.page_item {
+.header .header-inner .navigation .header-nav ul li a {
+  color: rgba(255, 255, 255, 0.65);
+  transition: color 0.2s ease-out;
+}
+.header .header-inner .navigation .header-nav ul li a:hover {
+  color: rgb(255, 255, 255);
+}
+.header .header-inner .navigation .header-nav ul li:not(:last-of-type) {
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.header .header-inner .navigation .header-nav ul li.current-menu-item.page_item a {
   color: var(--accent-color);
 }
 .header .header-inner .actions {
@@ -236,9 +264,60 @@ p:not(:last-of-type) {
 .header .menu-head-inner {
   --edges-color: var(--secondary-background-color);
 }
+.header #nav-toggle {
+  display: inline-flex;
+  width: 26px;
+  height: 26px;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  position: relative;
+}
+.header #nav-toggle span {
+  width: 26px;
+  height: 3.3px;
+  background-color: #fff;
+  border-radius: 10px;
+  transition: all 0.35s linear;
+}
+.header #nav-toggle::before, .header #nav-toggle::after {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 3.3px;
+  border-radius: 10px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  transition: all 0.2s linear;
+}
+.header #nav-toggle::before {
+  margin-top: -9px;
+}
+.header #nav-toggle::after {
+  margin-top: 9px;
+}
+.header.header-open #nav-toggle span {
+  transform: rotate(45deg);
+  opacity: 0;
+}
+.header.header-open #nav-toggle::before {
+  transform: translate(-50%, -50%) rotate(-45deg);
+  margin: 0;
+}
+.header.header-open #nav-toggle::after {
+  transform: translate(-50%, -50%) rotate(45deg);
+  margin: 0;
+}
+.header.header-open .header-inner .navigation {
+  visibility: visible;
+  opacity: 1;
+}
 
 .index-top {
-  padding: 10vh 0;
+  padding-top: var(--header-height);
+  padding-bottom: 10vh;
 }
 .index-top .top-inner {
   display: flex;
@@ -287,27 +366,59 @@ p:not(:last-of-type) {
   width: 100%;
 }
 .menu-head-inner .menu-search {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 999px;
   padding: 0.5em;
   flex: 0 0 auto;
 }
-.menu-head-inner .menu-search .menu-search-icon {
+.menu-head-inner .menu-search .menu-search-toggle {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   width: 30px;
   height: 30px;
 }
-.menu-head-inner .menu-search .menu-search-icon svg {
+.menu-head-inner .menu-search .menu-search-toggle svg {
   width: 50%;
   height: auto;
 }
 .menu-head-inner .menu-search .menu-search-input {
   width: 0;
+  color: #fff;
+}
+.menu-head-inner .menu-search .menu-search-input::-moz-placeholder {
+  color: #fff;
+}
+.menu-head-inner .menu-search .menu-search-input::placeholder {
+  color: #fff;
 }
 .menu-head-inner .menu-search .menu-search-clear {
-  display: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 0;
+  height: 100%;
+}
+.menu-head-inner .menu-search .menu-search-clear svg {
+  width: 70%;
+  height: auto;
+}
+.menu-head-inner .menu-search.active {
+  width: 30%;
+  padding-right: 1em;
+}
+.menu-head-inner .menu-search.active .menu-search-toggle {
+  pointer-events: none;
+}
+.menu-head-inner .menu-search.active .menu-search-input {
+  width: 85%;
+  margin-right: auto;
+}
+.menu-head-inner .menu-search.active .menu-search-clear {
+  width: auto;
 }
 .menu-head-inner .menu-categories-wrapper {
   flex: 1;
