--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,11 +25,15 @@
     --container-paddings: 60px;
     --header-height: 70px;
     --header-inner-height: 70px;
+    --font-size-tiny: 12px;
+    --font-size-small: 14px;
+    --font-size-normal: 16px;
     --border-small: 13px;
     --border-normal: 16px;
     --border-medium: 20px;
     --border-large: 32px;
-    --border-giant: 45px;
+    --icon-size-small: 12px;
+    --icon-size-normal: 18px;
 }
 
 body {
@@ -137,6 +141,9 @@ h4 {
 h1{
     font-size: 45px;
 }
+h2{
+    font-size: 38px;
+}
 
 p{
     color: rgba(255, 255, 255, 0.75);
@@ -154,7 +161,7 @@ p{
     color: #000;
     border-radius: var(--border-small);
     padding: 1em 2em;
-    font-size: 16px;
+    font-size: var(--font-size-small);
     font-weight: 700;
     margin-top: 2.75em;
     transition: all .3s ease-out;
@@ -209,16 +216,15 @@ p{
         z-index: 5;
 
         .logo{
-            width: 13%;
             margin-right: auto;
             margin-left: 2em;
 
             img{
-                max-width: 240px;
+                max-width: 170px;
                 width: 100%;
             }
         }
-        .navigation{
+        .dropdown{
             position: absolute;
             left: var(--container-paddings);
             bottom: 0;
@@ -228,19 +234,19 @@ p{
             opacity: 0;
             visibility: hidden;
             transition: all .05s ease-out;
+            padding: 1.45em;
+            border-radius: var(--border-medium);
+            background-color: rgba(55, 55, 55, 0.6);
+            backdrop-filter: blur(50px);
+            border: 1px solid rgba(#fff, 0.2);
             
 
             .header-nav{
                 font-weight: 500;
-                font-size: 16px;
+                font-size: var(--font-size-small);
 
                 ul {
                     display: block;
-                    padding: 1.45em;
-                    border-radius: var(--border-medium);
-                    background-color: rgba(55, 55, 55, 0.6);
-                    backdrop-filter: blur(50px);
-                    border: 1px solid rgba(#fff, 0.2);
             
                     li {
                         display: block;
@@ -260,13 +266,44 @@ p{
                         }
                         &.current-menu-item.page_item a {
                             color: var(--accent-color);
+                            font-weight: 700;
                         }
                     }
                 }
             }
         }
         .actions{
-            display: none;
+            font-size: var(--font-size-tiny);
+            
+            .action{
+                display: flex;
+                align-items: center;
+
+                .icon{
+                    margin-right: 1.25em;
+
+                    svg{
+                        width: var(--icon-size-normal);
+                        height: auto;
+                        
+                        path{
+                            color: #fff;
+                        }
+                    }
+                }
+                .content{
+
+                    p{
+                        margin: 0;
+
+                        &.bold{
+                            font-size: 1.25em;
+                            font-weight: 700;
+                            color: #fff;
+                        }
+                    }
+                }
+            }
         }
     }
     .menu-head-inner{
@@ -274,16 +311,17 @@ p{
     }
     #nav-toggle{
         display: inline-flex;
-        width: 26px;
-        height: 26px;
+        width: 22px;
+        height: 22px;
         align-items: center;
         justify-content: center;
         z-index: 1000;
         position: relative;
 
         span{
-            width: 26px;
-            height: 3.3px;
+            display: block;
+            width: 100%;
+            height: 2px;
             background-color: #fff;
             border-radius: 10px;
             transition: all .35s linear;
@@ -291,8 +329,8 @@ p{
         &::before, &::after{
             content: '';
             position: absolute;
-            width: 26px;
-            height: 3.3px;
+            width: 100%;
+            height: 2px;
             border-radius: 10px;
             left: 50%;
             top: 50%;
@@ -301,10 +339,10 @@ p{
             transition: all .2s linear;
         }
         &::before{
-            margin-top: -9px;
+            margin-top: -8px;
         }
         &::after{
-            margin-top: 9px;
+            margin-top: 8px;
         }
     }
     &.header-open{
@@ -326,7 +364,7 @@ p{
         }
         .header-inner{
 
-            .navigation{
+            .dropdown{
                 visibility: visible;
                 opacity: 1;
             }
@@ -336,7 +374,7 @@ p{
 
 .index-top{
     // background: url('../images/bg_pattern.svg') no-repeat center center/cover;
-    padding-top: var(--header-height);
+    padding-top: calc(var(--header-height) + 5vh);
     padding-bottom: 10vh;
 
     .top-inner{
@@ -345,6 +383,7 @@ p{
         justify-content: space-between;
         flex-wrap: wrap;
         margin: -40px;
+        font-size: var(--font-size-normal);
 
         .content{
             width: calc(55% - 80px);
@@ -353,7 +392,7 @@ p{
         .photo{
             width: calc(45% - 80px);
             margin: 40px;
-            border-radius: var(--border-giant);
+            border-radius: calc(var(--border-large) * 1.2);
             padding: 30px;
             border: 2px solid rgba(255, 255, 255, 0.3);
             background-color: rgba(255, 255, 255, 0.2);
@@ -363,7 +402,7 @@ p{
                 width: 100%;
                 aspect-ratio: 1/1;
                 object-fit: cover;
-                border-radius: calc(var(--border-giant) * 0.8);
+                border-radius: var(--border-large);
                 box-shadow: 30px 30px 60px 0 rgba(#000, 0.5);
             }
         }
@@ -383,18 +422,18 @@ p{
     align-items: center;
     justify-content: flex-start;
     color: #fff;
-    font-size: 14px;
+    font-size: var(--font-size-small);
     width: 100%;
 
     .menu-search{
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        border: 2px solid rgba(#fff, 0.3);
+        border: 1px solid rgba(#fff, 0.3);
         border-radius: 999px;
         padding: .5em;
-        flex: 0 0 auto;
-        // position: relative;
+        width: var(--search-width, auto);
+        transition: width .3s ease-out;
+        position: relative;
 
         .menu-search-toggle{
             display: inline-flex;
@@ -404,43 +443,58 @@ p{
             height: 30px;
 
             svg{
-                width: 50%;
+                width: var(--icon-size-normal);
                 height: auto;
+                
+                path{
+                    fill: #fff;
+                }
             }
         }
         .menu-search-input{
             width: 0;
             color: #fff;
+            transition: all .3s ease-out;
+            margin-right: auto;
 
             &::placeholder{
-                color: #fff;
+                color: rgba(#fff, 0.7);
             }
         }
         .menu-search-clear{
+            position: absolute;
+            right: 1.5em;
+            top: 0;
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            width: 0;
+            width: auto;
             height: 100%;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity .3s ease-in;
 
             svg{
-                width: 70%;
+                width: var(--icon-size-small);
                 height: auto;
+                
+                path{
+                    fill: #fff;
+                }
             }
         }
         &.active{
             width: 30%;
-            padding-right: 1em;
 
             .menu-search-toggle{
                 pointer-events: none;
             }
             .menu-search-input{
-                width: 85%;
-                margin-right: auto;
+                width: 80%;
             }
             .menu-search-clear{
-                width: auto;
+                opacity: 1;
+                visibility: visible;
             }
         }
     }
@@ -503,7 +557,7 @@ p{
                 border-radius: 200px;
                 padding: 1em 2em;
                 font-weight: 700;
-                transition: all .3s ease-out;
+                transition: border .3s ease-out, background-color .3s ease-out, color .3s ease-out;
                 white-space: nowrap;
     
                 &:not(:last-of-type){
@@ -529,7 +583,6 @@ p{
         padding-bottom: 45px;
     }
     .dish-block-heading{
-        font-size: 38px;
         margin-bottom: 1em;
     }
     .dish-block-container{
@@ -545,7 +598,7 @@ p{
             font-family: 'Mulish', sans-serif;
             color: #fff;
             font-weight: 600;
-            font-size: 16px;
+            font-size: var(--font-size-normal);
             line-height: 1.5;
             border-radius: var(--border-medium);
             overflow: hidden;
@@ -561,64 +614,66 @@ p{
             .dish-photo{
                 width: 100%;
                 height: 250px;
-                // margin-bottom: 2em;
-                // border-radius: 0 0 45px 45px;
-                // overflow: hidden;
-                
-                .photo{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                    object-position: center;
-                }
             }
             .dish-content{
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: stretch;
-                padding: 20px;
                 height: calc(100% - 250px);
-
-                .dish-name{
-                    font-weight: 800;
-                    margin-bottom: 1.45em;
-                }
-                .dish-price-row{
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-    
-                    .dish-weight{
-                        font-size: .825em;
-                        font-weight: 700;
-                        color: rgba(#fff, 0.65);
-                    }
-                    .add-to-cart-button{
-                        display: inline-block;
-                        background-color: rgba(#fff, 0.1);
-                        color: #fff;
-                        border-radius: 999px;
-                        padding: .35em .925em;
-                        font-weight: 700;
-                        font-size: 22px;
-                        transition: all .3s ease-out;
-    
-                        .currency{
-                            font-size: .65em;
-                        }
-                        &.added{
-                            background-color: #fff;
-                            color: #000;
-                        }
-                        &:not(.added):hover{
-                            background-color: rgba(#fff, 0.2);
-                        }
-                    }
-                }
             }
             .modal-content{
                 display: none;
+            }
+        }
+    }
+}
+
+.dish-photo .photo{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.dish-content{
+    padding: 20px;
+    font-size: var(--font-size-normal);
+    color: #fff;
+
+    .dish-name{
+        font-size: 1.125em;
+        font-weight: 800;
+        margin-bottom: 1.45em;
+    }
+    .dish-price-row{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .dish-weight{
+            font-size: .825em;
+            font-weight: 700;
+            color: rgba(#fff, 0.65);
+        }
+        .add-to-cart-button{
+            display: inline-block;
+            background-color: rgba(#fff, 0.1);
+            color: #fff;
+            border-radius: 999px;
+            padding: .35em .925em;
+            font-weight: 700;
+            font-size: 1.25em;
+            transition: all .3s ease-out;
+
+            .currency{
+                font-size: .65em;
+            }
+            &.added{
+                background-color: #fff;
+                color: #000;
+            }
+            &:not(.added):hover{
+                background-color: rgba(#fff, 0.2);
             }
         }
     }
@@ -633,6 +688,7 @@ p{
         top: 0;
         width: 100%;
         height: 100vh;
+        height: 100dvh;
         background: rgba(#000, 0.7);
         backdrop-filter: blur(5px);
         z-index: 9999;
@@ -659,68 +715,25 @@ p{
                 // box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
                 font-family: 'Mulish';
                 overflow: hidden;
-                font-size: 14px;
+                text-align: left;
 
                 .dish-photo{
                     width: 50%;
-
-                    .photo{
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        object-position: cover;
-                    }
                 }
                 .dish-content{
                     width: 50%;
                     padding: 45px;
-                    text-align: left;
+                    font-size: var(--font-size-small);
 
-                    .dish-name{
-                        color: #fff;
-                        font-weight: 800;
-                        margin-bottom: 1.45em;
-                    }
                     p{
-                        font-size: 12px;
-                    }
-                    .allergo{
-                        color: #fff;
-                        font-weight: 800;
-                        margin: 1.3em 0;
+                        font-size: var(--font-size-tiny);
                     }
                     .dish-price-row{
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-                        margin-top: 45px;
-        
-                        .dish-weight{
-                            font-size: .825em;
-                            font-weight: 700;
-                            color: rgba(#fff, 0.65);
-                        }
-                        .add-to-cart-button{
-                            display: inline-block;
-                            background-color: rgba(#fff, 0.1);
-                            color: #fff;
-                            border-radius: 999px;
-                            padding: .35em .925em;
-                            font-weight: 700;
-                            font-size: 22px;
-                            transition: all .3s ease-out;
-        
-                            .currency{
-                                font-size: .65em;
-                            }
-                            &.added{
-                                background-color: #fff;
-                                color: #000;
-                            }
-                            &:hover{
-                                background-color: rgba(#fff, 0.2);
-                            }
-                        }
+                        margin-top: 2.45em;
+                    }
+                    .allergo{
+                        font-weight: 800;
+                        margin: 1.3em 0;
                     }
                 }
             }
