--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@
 body {
   width: 100%;
   min-height: 100vh;
+  min-height: 100dvh;
   overflow-x: hidden;
   overflow-y: scroll;
   background-color: var(--primary-background-color);
@@ -185,6 +186,20 @@ p:not(:last-of-type) {
   width: 100%;
   padding: 0 var(--container-paddings);
   margin: 0 auto;
+}
+
+.main {
+  position: relative;
+}
+.main::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/bg_pattern.svg") no-repeat center center/cover;
+  z-index: -1;
+  opacity: 0.1;
 }
 
 .header {
@@ -367,22 +382,97 @@ p:not(:last-of-type) {
   margin: 40px;
   border-radius: calc(var(--border-large) * 1.2);
   padding: 30px;
-  border: 2px solid rgba(255, 255, 255, 0.3);
-  background-color: rgba(255, 255, 255, 0.2);
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
+  background: url("../images/bg_pattern_2.jpg") no-repeat center center/cover;
 }
 .index-top .top-inner .photo .top-photo {
   width: 100%;
   aspect-ratio: 1/1;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: var(--border-large);
+  border-radius: 50%;
   box-shadow: 30px 30px 60px 0 rgba(0, 0, 0, 0.5);
+}
+
+.promos {
+  padding-top: calc(var(--header-height) + 5vh);
+  padding-bottom: 5vh;
+  width: 100%;
+  overflow: hidden;
+}
+.promos .promos-wrapper {
+  --slider-gap: 30px;
+  margin: 0 calc(var(--slider-gap) / 2 * -1);
+}
+.promos .promos-wrapper .promos-slider .slick-list {
+  overflow: visible;
+}
+.promos .promos-wrapper .promos-slider .item {
+  width: calc(100% - var(--slider-gap));
+  margin: 0 calc(var(--slider-gap) / 2);
+  border-radius: var(--border-medium);
+  overflow: hidden;
+}
+.promos .promos-wrapper .promos-slider .item .promo {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.slider-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.45em;
+}
+.slider-nav .slider-dots {
+  position: relative;
+  width: auto;
+  margin: 0 20px;
+}
+.slider-nav .slider-dots .slick-dots {
+  display: flex;
+  justify-content: center;
+  margin: 0 -5px;
+  padding: 0;
+  font-size: 0;
+}
+.slider-nav .slider-dots .slick-dots li {
+  flex: 1 1 auto;
+  margin: 0 5px;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.slider-nav .slider-dots .slick-dots li button {
+  font-size: 0;
+  width: 40px;
+  height: 2px;
+  background: white;
+}
+.slider-nav .slider-dots .slick-dots li.slick-active {
+  opacity: 1;
+}
+.slider-nav .slider-arrow {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  padding: 0.2em;
+}
+.slider-nav .slider-arrow svg, .slider-nav .slider-arrow img {
+  width: 60%;
+  height: auto;
+}
+.slider-nav .slider-arrow svg path {
+  fill: var(--accent-color);
 }
 
 .menu-head {
   padding: 1em 0;
+  background-color: var(--primary-background-color);
 }
 
 .menu-head-inner {
@@ -513,8 +603,8 @@ p:not(:last-of-type) {
 }
 .menu-head-inner .menu-categories-wrapper .menu-categories .menu-category-selector {
   display: inline-block;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.15);
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   border-radius: 200px;
@@ -527,12 +617,12 @@ p:not(:last-of-type) {
   margin-right: 1em;
 }
 .menu-head-inner .menu-categories-wrapper .menu-categories .menu-category-selector.active {
-  background-color: #fff;
+  background-color: var(--accent-color);
   color: #000;
 }
 .menu-head-inner .menu-categories-wrapper .menu-categories .menu-category-selector:not(.active):hover {
   border: 1px solid rgba(255, 255, 255, 0.2);
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.15);
 }
 
 .dish-block {
@@ -561,9 +651,11 @@ p:not(:last-of-type) {
   line-height: 1.5;
   border-radius: var(--border-medium);
   overflow: hidden;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.07);
+  border: 1px solid rgba(255, 255, 255, 0.08);
   transition: all 0.3s ease-out;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
   cursor: pointer;
 }
 .dish-block .dish-block-container .dish-item:hover {
@@ -583,6 +675,19 @@ p:not(:last-of-type) {
 }
 .dish-block .dish-block-container .dish-item .modal-content {
   display: none;
+}
+
+#search-empty-text {
+  max-width: calc(var(--container-width) + var(--container-paddings) / 2);
+  width: 100%;
+  padding: 0 var(--container-paddings);
+  margin: 1em auto 3em auto;
+  font-family: "Mulish";
+  font-weight: 900;
+  color: #fff;
+  text-transform: none;
+  line-height: 1.3;
+  font-size: calc(var(--font-size-normal) * 2);
 }
 
 .dish-photo .photo {
@@ -644,20 +749,21 @@ p:not(:last-of-type) {
   height: 100vh;
   height: 100dvh;
   background: rgba(0, 0, 0, 0.7);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   z-index: 9999;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .modals .modal .modal-inner {
   display: flex;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
 .modals .modal .modal-inner .modal-content {
   display: flex;
@@ -688,4 +794,8 @@ p:not(:last-of-type) {
 .modals .modal .modal-inner .modal-content .dish-content .allergo {
   font-weight: 800;
   margin: 1.3em 0;
+}
+.modals .modal .modal-inner .modal-content .dish-content .button {
+  margin-top: 0;
+  font-size: 0.825em;
 }/*# sourceMappingURL=style.css.map */
